# Licznik-Statystyki-Tekstu

CMakeProject_KInga_Solarz/: CMakeLists.txt
CMakeProject_KInga_Solarz/CMakeProject_KInga_Solarz/: CMakeLists.txt  CMakeProject_KInga_Solarz.cpp  CMakeProject_KInga_Solarz.h
