# CMakeList.txt: projekt CMake dla elementu CMakeProject_KInga_Solarz, dołącz źródło i zdefiniuj
# tutaj logikę specyficzną dla projektu.
#
cmake_minimum_required (VERSION 3.8)

# Dodaj źródło do pliku wykonywalnego tego projektu.
add_executable (CMakeProject_KInga_Solarz "CMakeProject_KInga_Solarz.cpp" "CMakeProject_KInga_Solarz.h")

# TODO: Dodaj testy i zainstaluj elementy docelowe w razie potrzeby.
